update viewport & fix sizing for phones

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="fr">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta content="width=device-width" name="viewport" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0" />
     <link rel="stylesheet" href="css/main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,9 +15,9 @@
     <header id="header"></header>
     <script async src="header.js"></script>
 
-    <section id="main">
+    <div id="main">
       <h2>Hello world</h2>
-    </section>
+    </div>
 
     <footer id="footer"></footer>
     <script async src="footer.js"></script>
