--- a/timeline.html
+++ b/timeline.html
@@ -2,6 +2,8 @@
 <html lang="fr">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta content="width=device-width" name="viewport" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0" />
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/timeline.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -14,7 +16,7 @@
     <header id="header"></header>
     <script async src="header.js"></script>
 
-    <section id="main">
+    <div id="main">
       <div id="timeline">
         <div class="ag-timeline-block">
           <div class="ag-timeline_title-box">
@@ -33,9 +35,9 @@
             </div>
           </section>
         </div>
-        <script async src="./timeline.js"></script>
+        <script src="./timeline.js"></script>
       </div>
-    </section>
+    </div>
 
     <footer id="footer"></footer>
     <script async src="footer.js"></script>
