noscript + index text + correct typo in timeline

--- a/index.html
+++ b/index.html
@@ -16,10 +16,27 @@
     <script async src="header.js"></script>
 
     <div id="main">
-      <h2>Hello world</h2>
+      <div class="incipit">
+        Qui n’a jamais rêvé d’incarner<br>
+        les héro·ïnes de ses livres,<br>
+        films et séries préférées ?<br>
+        D’amener à la vie ses (anti-)modèles&nbsp;?<br>
+        Imaginez un monde où ce fantasme<br>
+        serait possible, où l’imaginaire<br>
+        côtoie la réalité, où vos personnages<br>
+        favoris prennent vie.<br>
+      </div>
+      
+      <p>"Le Cycle des Songes" est une campagne de <a href="https://fr.wikipedia.org/wiki/Jeu_de_r%C3%B4le_grandeur_nature" target="_blank">jeu de rôle grandeur nature</a> (communément appelé "GN") qui se déroule dans un univers contemporain dans lequel vous pouvez incarner des personnages de fiction qui sont apparus dans le monde réel.</p> 
+      <p>Ce GN est organisé par le groupe "les Chats-pîtrés" et l'ASBL "Et Encore...", depuis juin 2023.</p>
     </div>
 
     <footer id="footer"></footer>
     <script async src="footer.js"></script>
+
+    <noscript><div id="noscript">
+      <h1>Javascript est désactivé</h1>
+      <p>Veuillez activer JS pour utiliser ce site web.</p>
+    </div></noscript>
   </body>
 </html>
