--- a/timeline.html
+++ b/timeline.html
@@ -41,5 +41,10 @@
 
     <footer id="footer"></footer>
     <script async src="footer.js"></script>
+
+    <noscript><div id="noscript">
+      <h1>Javascript est désactivé</h1>
+      <p>Veuillez activer JS pour utiliser ce site web.</p>
+    </div></noscript> 
   </body>
 </html>
