--- a/timeline.html
+++ b/timeline.html
@@ -17,6 +17,13 @@
     <script async src="header.js"></script>
 
     <div id="main">
+      <div id="popup">
+        <div id="popupbackground">
+          <div id="popupclose">&#x2716;</div>
+        </div>
+        <div id="popupcontent"></div>
+      </div>
+
       <div id="timeline">
         <div class="ag-timeline-block">
           <div class="ag-timeline_title-box">
