add swipe gesture to popup slideshow

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+    <script src="swipe.js"></script>
     <header id="header"></header>
     <script async src="header.js"></script>
 
