--- a/timeline.html
+++ b/timeline.html
@@ -28,6 +28,10 @@
         <div class="ag-timeline-block">
           <div class="ag-timeline_title-box">
             <h2>Ligne du temps des événements connus de toustes</h2>
+            <div id="search">
+              <input type="text" placeholder="Rechercher" id="search-input" onclick="searchTimeline()">
+              <div id="searchclose">&#x2716;</div>
+            </div>
           </div>
           <section class="ag-section">
             <div class="ag-format-container">
