--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
       
       <p>"Le Cycle des Songes" est une campagne de <a href="https://fr.wikipedia.org/wiki/Jeu_de_r%C3%B4le_grandeur_nature" target="_blank">jeu de rôle grandeur nature</a> (communément appelé "GN") qui se déroule dans un univers contemporain dans lequel vous pouvez incarner des personnages de fiction qui sont apparus dans le monde réel.</p> 
-      <p>Ce GN est organisé par le groupe "les Chats-pîtrés" et l'ASBL "Et Encore...", depuis juin 2023.</p>
+      <p>Ce GN est organisé par le groupe "les Chats-pitrés" et l'ASBL "Et Encore..." depuis juin 2023.</p>
     </div>
 
     <footer id="footer"></footer>
