--- a/equipe.html
+++ b/equipe.html
@@ -16,19 +16,14 @@
     <script async src="header.js"></script>
 
     <div id="main">
-      <div class="incipit">
-        Qui n’a jamais rêvé d’incarner<br>
-        les héro·ïnes de ses livres,<br>
-        films et séries préférées ?<br>
-        D’amener à la vie ses (anti-)modèles&nbsp;?<br>
-        Imaginez un monde où ce fantasme<br>
-        serait possible, où l’imaginaire<br>
-        côtoie la réalité, où vos personnages<br>
-        favoris prennent vie.<br>
-      </div>
-      
-      <p>"Le Cycle des Songes" est une campagne de <a href="https://fr.wikipedia.org/wiki/Jeu_de_r%C3%B4le_grandeur_nature" target="_blank">jeu de rôle grandeur nature</a> (communément appelé "GN") qui se déroule dans un univers contemporain dans lequel vous pouvez incarner des personnages de fiction qui sont apparus dans le monde réel.</p> 
-      <p>Ce GN est organisé par <a href="./equipe.html">le groupe "les Chats-pitrés"</a> et <a href="https://etencore-asbl.org/" targer="_blank">l'ASBL "Et Encore..."</a> depuis juin 2023.</p>
+      <img src="./images/equipe/orgas.jpg">
+      <img src="./images/equipe/justine.jpg">
+      <img src="./images/equipe/kevin.jpg">
+      <img src="./images/equipe/laura.jpg">
+      <img src="./images/equipe/alex.jpg">
+      <img src="./images/equipe/pilou.jpg">
+      <img src="./images/equipe/sara.jpg">
+      <p>Et on n'oublie bien sûr pas les ancien·nes orgas qui nous ont bien aidés par le passé&nbsp;: Nathan, Julien et Lucas.</p>
     </div>
 
     <footer id="footer"></footer>
