nav : active tabs

--- a/equipe.html
+++ b/equipe.html
@@ -33,5 +33,7 @@
       <h1>Javascript est désactivé</h1>
       <p>Veuillez activer JS pour utiliser ce site web.</p>
     </div></noscript>
+
+    <script>setTimeout(() => {$('nav a#equipe').addClass('active')}, 0)</script>
   </body>
 </html>
