--- a/univers.html
+++ b/univers.html
@@ -38,6 +38,7 @@
     <footer id="footer"></footer>
     <script async src="footer.js"></script>
 
+    <script>setTimeout(() => {$('nav a#univers').addClass('active')}, 0)</script>
     <noscript><div id="noscript">
       <h1>Javascript est désactivé</h1>
       <p>Veuillez activer JS pour utiliser ce site web.</p>
