--- a/timeline.html
+++ b/timeline.html
@@ -53,6 +53,7 @@
     <footer id="footer"></footer>
     <script async src="footer.js"></script>
 
+    <script>setTimeout(() => {$('nav a#timeline').addClass('active')}, 0)</script>
     <noscript><div id="noscript">
       <h1>Javascript est désactivé</h1>
       <p>Veuillez activer JS pour utiliser ce site web.</p>
