add events to index.html

--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
       
       <p>"Le Cycle des Songes" est une campagne de <a href="https://fr.wikipedia.org/wiki/Jeu_de_r%C3%B4le_grandeur_nature" target="_blank">jeu de rôle grandeur nature</a> (communément appelé "GN") qui se déroule dans un univers contemporain dans lequel vous pouvez incarner des personnages de fiction qui sont apparus dans le monde réel.</p> 
       <p>Ce GN est organisé par <a href="./equipe.html">le groupe "les Chats-pitrés"</a> et <a href="https://etencore-asbl.org/" targer="_blank">l'ASBL "Et Encore..."</a> depuis juin 2023.</p>
+
+      <div id="events">
+        <h2>Nos événements</h2>
+        <div id="generated_events">
+          <!-- events come here -->
+        </div>
+      </div>
+      <script src="./js/events.js"></script>
     </div>
 
     <footer id="footer"></footer>
