style & rework index

--- a/index.html
+++ b/index.html
@@ -16,19 +16,28 @@
     <script async src="header.js"></script>
 
     <div id="main">
+      <div id="intro">
+        <div class="image"></div>
+        <div class="legende">Et si les personnages de fiction prenaient vie à notre époque&nbsp;?</div>
+      </div>
+
       <div class="incipit">
-        Qui n’a jamais rêvé d’incarner<br>
-        les héro·ïnes de ses livres,<br>
-        films et séries préférées ?<br>
-        D’amener à la vie ses (anti-)modèles&nbsp;?<br>
-        Imaginez un monde où ce fantasme<br>
-        serait possible, où l’imaginaire<br>
-        côtoie la réalité, où vos personnages<br>
-        favoris prennent vie.<br>
+        Qui n’a jamais rêvé d’incarner les héro·ïnes<br>
+        de ses livres, films et séries préférées&nbsp;?<br>
+        D’amener à la vie ses (anti-)modèles&nbsp;?<br><br>
+        Imaginez un monde<br>
+        où ce fantasme serait possible,<br>
+        où l’imaginaire côtoie la réalité,<br>
+        où vos personnages favoris prennent vie.<br>
       </div>
       
-      <p>"Le Cycle des Songes" est une campagne de <a href="https://fr.wikipedia.org/wiki/Jeu_de_r%C3%B4le_grandeur_nature" target="_blank">jeu de rôle grandeur nature</a> (communément appelé "GN") qui se déroule dans un univers contemporain dans lequel vous pouvez incarner des personnages de fiction qui sont apparus dans le monde réel.</p> 
-      <p>Ce GN est organisé par <a href="./equipe.html">le groupe "les Chats-pitrés"</a> et <a href="https://etencore-asbl.org/" targer="_blank">l'ASBL "Et Encore..."</a> depuis juin 2023.</p>
+      <div id="description">
+        <p>"Le Cycle des Songes" est une campagne belge de <a href="https://fr.wikipedia.org/wiki/Jeu_de_r%C3%B4le_grandeur_nature" target="_blank">jeu de rôle grandeur nature</a> (aussi appelé "GN" ou "Larp") qui se déroule dans un univers contemporain. </p> 
+        <p>Vous pouvez y incarner des personnages de fiction, des Egrégores, apparus dans le monde réel. Ils vivent en communauté, dans le secret : les Rêveurs, les êtres humains normaux, ne doivent rien savoir. Et surtout pas l'existence des ENI, les Egrégores Non-Intégrables, les monstres et créatures non-humaines de fiction apparues, elles aussi.</p>
+        <p>Intrigues politiques, vie en communauté, enquêtes, pouvoirs antiques et artéfacts : que vous réserve le monde des Egrégores&nbsp;?</p>
+      </div>
+
+      <p id="inspiration">Ce GN est inspiré de <a href="https://bureaudessonges.wixsite.com/lebds" target="_blank">l'univers du Bureau des Songes, en France</a>. Il est organisé depuis juin 2023 par <a href="./equipe.html">le groupe "les Chats-pitrés"</a>, sous l'égide de <a href="https://etencore-asbl.org/" targer="_blank">l'ASBL "Et Encore..."</a>.</p>
 
       <div id="events">
         <h2>Nos événements</h2>
