--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         </div>
       </div>
       <script src="./js/events.js"></script>
+      <script src="./js/index.js"></script>
     </div>
 
     <footer id="footer"></footer>
