move image to html code

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div id="main">
       <div id="intro">
-        <div class="image"></div>
+        <div class="image" style="background-image: url(./images/logo-black.png);"></div>
         <div class="legende">Et si les personnages de fiction prenaient vie à notre époque&nbsp;?</div>
       </div>
 
