--- a/univers.html
+++ b/univers.html
@@ -2,8 +2,7 @@
 <html lang="fr">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta content="width=device-width" name="viewport" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/univers.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -11,6 +10,7 @@
     <script src="./data/events.js"></script>
     <script src="./data/equipe.js"></script>
     <script src="./data/timeline.js"></script>
+    <title>Univers | Le Cycle des Songes</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
@@ -29,8 +29,8 @@
       </div>
 
       <h2>Présentation de l'Univers</h2>
-      <object data="./pdf/Présentation générale de l'Univers.pdf" type="application/pdf" class="pdf" width="800" height="520">
-        <p><a href="/pdf/Présentation générale de l'Univers.pdf" download>Vous pouvez télécharger ce PDF en cliquant ici</a></p>
+      <object data="./pdf/Présentation%20générale%20de%20l'Univers.pdf" type="application/pdf" class="pdf" width="800" height="520">
+        <p><a href="/pdf/Présentation%20générale%20de%20l'Univers.pdf" download>Vous pouvez télécharger ce PDF en cliquant ici</a></p>
       </object>
       <h2>Abécédaire</h2>
       <div id="abcbook">
