--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="fr">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta content="width=device-width" name="viewport" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./data/abcbook.js"></script>
     <script src="./data/events.js"></script>
     <script src="./data/equipe.js"></script>
     <script src="./data/timeline.js"></script>
+    <title>Le Cycle des Songes</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
@@ -41,7 +41,7 @@
         <p>Intrigues politiques, vie en communauté, enquêtes, pouvoirs antiques et artéfacts : que vous réserve le monde des Egrégores&nbsp;?</p>
       </div>
 
-      <p id="inspiration">Ce GN est inspiré de l'univers du <a href="https://bureaudessonges.wixsite.com/lebds" target="_blank">Bureau des Songes</a> (France). Il est organisé en Belgique depuis juin 2023 par <a href="./equipe.html">le groupe "les Chats-pitrés"</a>, sous l'égide de <a href="https://etencore-asbl.org/" targer="_blank">l'ASBL "Et Encore..."</a>.</p>
+      <p id="inspiration">Ce GN est inspiré de l'univers du <a href="https://bureaudessonges.wixsite.com/lebds" target="_blank">Bureau des Songes</a> (France). Il est organisé en Belgique depuis juin 2023 par <a href="./equipe.html">le groupe "les Chats-pitrés"</a>, sous l'égide de <a href="https://etencore-asbl.org/" target="_blank">l'ASBL "Et Encore..."</a>.</p>
 
       <div id="events">
         <h2>Nos événements</h2>
