--- a/timeline.html
+++ b/timeline.html
@@ -2,8 +2,7 @@
 <html lang="fr">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta content="width=device-width" name="viewport" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/timeline.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -11,6 +10,7 @@
     <script src="./data/events.js"></script>
     <script src="./data/equipe.js"></script>
     <script src="./data/timeline.js"></script>
+    <title>Timeline | Le Cycle des Songes</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
@@ -37,7 +37,7 @@
               <div id="searchclose">&#x2716;</div>
             </div>
           </div>
-          <section class="ag-section">
+          <div class="ag-section">
             <div class="ag-format-container">
               <div class="js-timeline ag-timeline">
                 <div class="js-timeline_line ag-timeline_line">
@@ -48,7 +48,7 @@
                 </div>
               </div>
             </div>
-          </section>
+          </div>
         </div>
         <script src="./js/timeline.js"></script>
       </div>
