--- a/equipe.html
+++ b/equipe.html
@@ -10,7 +10,15 @@
     <script src="./data/events.js"></script>
     <script src="./data/equipe.js"></script>
     <script src="./data/timeline.js"></script>
+
     <title>Qui sommes-nous ? | Le Cycle des Songes</title>
+    <meta name="description" content="Et si les personnages de fiction prenaient vie à notre époque ? Une campagne de jeu de rôle grandeur nature belge."/>
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Le Cycle des Songes"/>
+    <meta property="og:description" content="Et si les personnages de fiction prenaient vie à notre époque ? Une campagne de jeu de rôle grandeur nature belge."/>
+    <meta property="og:image" content="https://vankasteelj.github.io/cds-website/images/social.jpg" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
