--- a/documents.html
+++ b/documents.html
@@ -17,7 +17,7 @@
     <meta property="og:title" content="Le Cycle des Songes"/>
     <meta property="og:description" content="Et si les personnages de fiction prenaient vie à notre époque ? Une campagne de jeu de rôle grandeur nature belge."/>
     <meta property="og:image" content="https://vankasteelj.github.io/cds-website/images/social.jpg" />
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
@@ -29,14 +29,11 @@
 
     <div id="main">
       <h2>Note d'intention générale</h2>
-      <object data="./pdf/Note%20d'intention%20générale.pdf" type="application/pdf" class="pdf" width="800" height="520">
-        <p><a href="/pdf/Note%20d'intention%20générale.pdf" download>Vous pouvez télécharger ce PDF en cliquant ici</a></p>
-      </object>
+      <p><a href="/pdf/Note%20d'intention%20générale.pdf" download>Télécharger la note d'intention en PDF</a></p>
 
       <h2>Livre de règles</h2>
-      <object data="./pdf/Livre%20de%20règles.pdf" type="application/pdf" class="pdf" width="800" height="520">
-        <p><a href="/pdf/Livre%20de%20règles.pdf" download>Vous pouvez télécharger ce PDF en cliquant ici</a></p>
-      </object>
+      <p><a href="/pdf/Livre%20de%20règles.pdf" download>Télécharger les règles en PDF</a></p>
+
     </div>
 
     <footer id="footer"></footer>
