--- a/univers.html
+++ b/univers.html
@@ -37,20 +37,16 @@
       </div>
 
       <h2>Présentation de l'Univers</h2>
-      <object data="./pdf/Présentation%20générale%20de%20l'Univers.pdf" type="application/pdf" class="pdf" width="800" height="520">
-        <p><a href="/pdf/Présentation%20générale%20de%20l'Univers.pdf" download>Vous pouvez télécharger ce PDF en cliquant ici</a></p>
-      </object>
+      <p><a href="/pdf/Présentation%20générale%20de%20l'Univers.pdf" download>Télécharger la présentation de l'univers en PDF</a></p>
+
+      <h2>Aide de jeu : Législatif & Exécutif</h2>
+      <p><a href="/pdf/Aide%20de%20jeu%20_%20Legislatif-Executif.pdf" download>Télécharger l'aide de jeu Législatif & Exécutif en PDF</a></p>
 
       <h2>Abécédaire</h2>
       <div id="abcbook">
         <!-- les entrées vont ici -->
       </div>
       <script src="./js/univers.js"></script>
-
-      <h2>Aide de jeu : Législatif & Exécutif</h2>
-      <object data="./pdf/Aide%20de%20jeu%20_%20Legislatif-Executif.pdf" type="application/pdf" class="pdf" width="800" height="520">
-        <p><a href="/pdf/Aide%20de%20jeu%20_%20Legislatif-Executif.pdf" download>Vous pouvez télécharger ce PDF en cliquant ici</a></p>
-      </object>
     </div>
 
     <footer id="footer"></footer>
