replace absolute links for pdfs

--- a/documents.html
+++ b/documents.html
@@ -29,10 +29,10 @@
 
     <div id="main">
       <h2>Note d'intention générale</h2>
-      <p><a href="/pdf/Note%20d'intention%20générale.pdf" download>Télécharger la note d'intention en PDF</a></p>
+      <p><a href="./pdf/Note%20d'intention%20générale.pdf" download>Télécharger la note d'intention en PDF</a></p>
 
       <h2>Livre de règles</h2>
-      <p><a href="/pdf/Livre%20de%20règles.pdf" download>Télécharger les règles en PDF</a></p>
+      <p><a href="./pdf/Livre%20de%20règles.pdf" download>Télécharger les règles en PDF</a></p>
 
     </div>
 
