--- a/univers.html
+++ b/univers.html
@@ -37,10 +37,10 @@
       </div>
 
       <h2>Présentation de l'Univers</h2>
-      <p><a href="/pdf/Présentation%20générale%20de%20l'Univers.pdf" download>Télécharger la présentation de l'univers en PDF</a></p>
+      <p><a href="./pdf/Présentation%20générale%20de%20l'Univers.pdf" download>Télécharger la présentation de l'univers en PDF</a></p>
 
       <h2>Aide de jeu : Législatif & Exécutif</h2>
-      <p><a href="/pdf/Aide%20de%20jeu%20_%20Legislatif-Executif.pdf" download>Télécharger l'aide de jeu Législatif & Exécutif en PDF</a></p>
+      <p><a href="./pdf/Aide%20de%20jeu%20_%20Legislatif-Executif.pdf" download>Télécharger l'aide de jeu Législatif & Exécutif en PDF</a></p>
 
       <h2>Abécédaire</h2>
       <div id="abcbook">
