--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <p>Intrigues politiques, vie en communauté, enquêtes, pouvoirs antiques et artéfacts : que vous réserve le monde des Egrégores&nbsp;?</p>
       </div>
 
-      <p id="inspiration">Ce GN est inspiré de l'univers du <a href="https://bureaudessonges.wixsite.com/lebds" target="_blank">Bureau des Songes</a> (France). Il est organisé en Belgique depuis juin 2023 par <a href="./equipe.html">le groupe "les Chats-pitrés"</a>, sous l'égide de <a href="https://etencore-asbl.org/" target="_blank">l'ASBL "Et Encore..."</a>.</p>
+      <p id="inspiration">Ce GN est inspiré de l'univers du <a href="https://bureaudessonges.wixsite.com/lebds" target="_blank">Bureau des Songes</a> (France), nous les remercions de nous avoir confié leur univers. Il est organisé en Belgique depuis juin 2023 par <a href="./equipe.html">le groupe "les Chats-pitrés"</a>, sous l'égide de <a href="https://etencore-asbl.org/" target="_blank">l'ASBL "Et Encore..."</a>.</p>
 
       <div id="events">
         <h2>Nos événements</h2>
